force-app/main/default/objects/Loan_External_Check_Log__c/Loan_External_Check_Log__c.object-meta.xml
<CustomObject>
    <label>Loan External Check Log</label>
    <nameField>
        <label>Loan_External_Check_Log__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan External Check Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>