force-app/main/default/objects/Loan_External_Check_Log__c/fields/Loan_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Loan_Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Enquiry</label>
    <referenceTo>Loan_Enquiry__c</referenceTo>
    <relationshipLabel>Loan External Check Logs</relationshipLabel>
    <relationshipName>Loan_External_Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>